add swagger api specification for match_block
